# OrbitalOS

./: .gitignore  DEV_STARTUP.md  README.md  SATELLITE_API_DOCS.md  SATELLITE_API_GUIDE.md  SATELLITE_SETUP.md  SETUP_GUIDE.md  mock_backend.py  setup_satellite_api.bat  setup_satellite_api.sh  start-dev.bat  start-dev.ps1
backend/: Cargo.toml  env.example
backend/sat_api/: Cargo.toml  README.md  test_conjunction_analysis.json  test_orbit_reservation.json
backend/sat_api/examples/: debug_tle.rs
backend/sat_api/src/: alerts.rs  api.rs  conjunction.rs  handlers.rs  lib.rs  main.rs  ml.rs  reservation.rs  tle.rs  tracker.rs
backend/sat_api/tests/: tle_debug.rs
backend/src/: auth.rs  db.rs  encryption.rs  handlers.rs  main.rs  main_backup.rs  main_local.rs  main_satellite.rs  migrations  models.rs  n2yo_service.rs  notification.rs  orbit.rs  satellite_service.rs  tle_cache.rs
backend/src/routes/: bookings.rs  dashboard.rs  mod.rs  satellites.rs
frontend/: package-lock.json  package.json  test.html  vite.config.js
frontend/src/: App.jsx  cosmic-background-backup.css  cosmic-background.css  index.css  main.jsx
frontend/src/components/: ConjunctionAnalysis.jsx  CosmicStars.jsx  EarthOrbitScene.jsx  Enhanced3DVisualizer.jsx  EnhancedConjunctionAnalysis.jsx  EnhancedVisualizer.jsx  GlobalHeader.jsx  Globe.jsx  Layout.jsx  Navigation.jsx  SatelliteTracker.jsx  SatelliteVisualization.jsx  SatelliteVisualizationNASA.jsx  ThemeProvider.jsx  ThemeToggle.jsx
frontend/src/mission-control-components/: BookingPage.jsx  EnhancedNavigation.jsx  HeroSection.jsx  SatelliteTracker.jsx  SpaceAdvisorHome.jsx
frontend/src/pages/: AlertsPage.jsx  BookingPage.jsx  Dashboard.jsx  EnhancedVisualizer.jsx  EnhancedVisualizerPage.jsx  LandingPage.jsx  LandingPageClean.jsx  LandingPageNew.jsx  SatelliteVisualizer.jsx  SimpleVisualizer.jsx  SolarSystemLanding.jsx  Visualizer.jsx
frontend/src/services/: satelliteService.js  satelliteService_enhanced.js
frontend/src/stores/: authStore.js  dataStores.js  enhancedStores.js
infra/: backup_gpg.ps1  backup_gpg.sh  docker-compose.yml
orbitalos/backend/: Cargo.toml
orbitalos/backend/src/: auth.rs
orbitalos/backend/src/routes/: alerts.rs  risk.rs
orbitalos/frontend/: tailwind.config.js  vite.config.js
orbitalos/frontend/src/: App.jsx  index.html  main.jsx
orbitalos/frontend/src/components/: LoadingSpinner.jsx
orbitalos/frontend/src/pages/: BookingPage.jsx  LandingPage.jsx  LoginPage.jsx
orbitalos/frontend/src/stores/: dataStores.js
orbitalos/infra/: Dockerfile  docker-compose.yml  nginx.conf
orbitalos/scripts/: setup_demo.sh
tests/: backend_test.rs  property_test.rs
