[package]
name = "orbitalos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate", "json"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"

# Random number generation
rand = "0.8"

# Math calculations
nalgebra = "0.32"

# SGP4 orbital calculations
sgp4 = { version = "2.3", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Data export
csv = "1.3"

# Additional utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
