[package]
name = "sat_api"
version = "0.1.0"
edition = "2021"

[dependencies]
sgp4 = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
nalgebra = { version = "0.32", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }